--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- Google -->
     <meta name="google-site-verification" content="trpxUsqHxx7RCns4APt59yJJ1CLkTM9mLSifOtgB3ms" />
 
-    <title>Alex Balta - Web Portfolio</title>
+    <title>Melvin Gandulfos - Web Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
